# sb-runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/sb-cli/: Cargo.toml
crates/sb-cli/src/: main.rs
crates/sb-policy/: Cargo.toml
crates/sb-policy/src/: lib.rs
crates/sb-receipt/: Cargo.toml  README.md
crates/sb-receipt/src/: lib.rs
crates/sb-sandbox/: Cargo.toml
crates/sb-sandbox/src/: lib.rs  linux.rs  profile.rs
examples/agt-integration/: README.md  sb_runtime_skill.py
examples/agt-integration/policies/: dev-safe.cedar
examples/basic/: README.md  policy.cedar
examples/cyclonedx-integration/: README.md  attach_receipt.py
