[package]
name        = "sb-policy"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
authors.workspace     = true
description = "Cedar-backed policy evaluation for sb-runtime. Evaluates agent actions before a sandboxed exec."

[dependencies]
cedar-policy = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }

[lints]
workspace = true
