[package]
name        = "sb-receipt"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
authors.workspace     = true
description = "Ed25519-signed, JCS-canonical, hash-chained receipts for sandboxed agent decisions."
readme = "README.md"

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
ed25519-dalek = { workspace = true }
rand         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
thiserror    = { workspace = true }

[lints]
workspace = true
