[package]
name        = "sb-sandbox"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
authors.workspace     = true
description = "OS-native sandboxing primitives for sb-runtime. Linux (Landlock + seccomp) today; macOS / Windows scaffolded."

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock    = { workspace = true }
seccompiler = { workspace = true }
nix         = { workspace = true }

[lints]
workspace = true
